# tauri-plugin-mcp

./: Cargo.toml  package.json
mcp-server-ts/: package.json  pnpm-lock.yaml  visual-test.mjs
permissions/autogenerated/: reference.md
src/platform/: macos.rs
src/tools/: take_screenshot.rs
